HBASE-6785 Convert AggregateProtocol to protobuf defined coprocessor service (Devaraj Das)
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1398175 13f79535-47bb-0310-9956-ffa450edef68